@@ -168,7 +168,7 @@ unsigned int WebPCompressor::Compress( RawTile& rawtile ){
 
   // Allocate the appropriate amount of memory if the encoded WebP is larger than the raw image buffer
   if( size > rawtile.dataLength ){
-    delete[] (unsigned char*) rawtile.data;
+    if( rawtile.memoryManaged ) delete[] (unsigned char*) rawtile.data;
     rawtile.data = new unsigned char[size];
   }
 
